# Coogle

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  babel.config.js  package.json  prod.env  webpack.config.js
scripts/: build.sh
src/: main.rs  project.rs  search.rs
static/: index.html  style.css
web/: app.js
