[package]
name = "org-search"
version = "0.1.0"
authors = ["Alexander Sanchez <asanchez.dev@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.dev]
codegen-units = 4

[dependencies]
rocket = "0.4.1"
websocket = "0.22.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
git2 = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }
dotenv = "0.14.1"


[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "handlebars_templates", "serve"]

[dependencies.regex]
version = "1.1.6"
